deploy: e77f11c32aaf9358f09cd3c46e515f6527138838

--- a/01_midi_drums/01_midi_drums.html
+++ b/01_midi_drums/01_midi_drums.html
@@ -3203,7 +3203,7 @@ With the analysis above we can verify borders of data we want to allow.</p>
 </div>
 </div>
 </div>
-<p>We now filtered half of our available examples by just looking at the metadata of the MIDI files.
+<p>We have now filtered half of our available examples, just by looking at the metadata of the MIDI files.
 The next step is to transform the drum track of each MIDI file into a mathematical representation.</p>
 <p>The notatation within the MIDI file is bound to time, but in music we often represent the time domain in relation to a tempo which remaps the time measured in seconds.
 A common unit for this is <em>beats per minute</em> (bpm) where 60 bpm maps each second to a <em>beat</em> - if we want to shorten the time between two beats (commonly refered to as <em>faster</em>) we increase the <em>bpm</em> and vice versa.</p>
